--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,21 +1,21 @@
-
 <div class="container">
-	<div class="row">
+	<div class="row justify-content-center align-items-center" style="height: 100vh ;">
 
-		<div class="col-md-6" style="background-color: rgba(220, 220, 220, 0.762);  text-align: center; height: 700px; padding-top: 100px;">
+		<div class="col-md-6"
+			style="background-color: rgba(220, 220, 220, 0.762);  text-align: center; height: 700px; padding-top: 100px;">
 			<div>
 				<img class="rounded-circle img-fluid" alt="Headshot" src="./images/headshot.png"
 					style="width:200px ; height:auto ;">
 				<h1>
 					Collin Stolpa
 				</h1>
-				<h5>Software Engineer </h5>
+				<h5>Software / DevOps Engineer </h5>
 				<div class="col-md-12">
 
-					<a href="#"><i class="fa-brands fa-facebook fa-3x"></i></a>
-					<a href="#"><i class="fa-brands fa-github fa-3x"></i></a>
-					<a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a>
-					<a href="#"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+					<a href="https://facebook.com/collin.stolpa"><i class="fa-brands fa-facebook fa-3x"></i></a>
+					<a href="https://github.com/cstolps8"><i class="fa-brands fa-github fa-3x"></i></a>
+					<a href="https://www.instagram.com/cstolps8/"><i class="fa-brands fa-instagram fa-3x"></i></a>
+					<a href="https://www.linkedin.com/in/collin-stolpa-b0a832b0"><i class="fa-brands fa-linkedin fa-3x"></i></a>
 
 				</div>
 			</div>
@@ -30,9 +30,9 @@
 				DevOps practices. I am an outgoing person who is very personable and team oriented. I consider myself a
 				charismatic and proactive quick learner, who pays close attention to detail.
 			</p>
-			<div class="row">
+			<div class="row " style="text-align: center ;">
 				<div class="col-md-12">
-					<div class="row">
+					<div class="row ">
 						<div class="col-md-6">
 							<button class="button-54" role="button">Contact Me</button>
 						</div>
@@ -45,49 +45,86 @@
 		</div>
 
 	</div>
+</div>
 
-	<div class="row">
+<div class="container notTopContainer">
+
+	<div class="row justify-content-center align-items-center">
 		<div class="col-md-6">
-			<div class="features-clean"></div>
-			<div class="row intro">
-				<div class="col-sm-12 ">
-					<h2 class="text-center"> Attributes </h2>
-					<p class="text-center">Below are abilities that I would classify myself with </p>
-				</div>
+			<div class="col-md-12" id="myKnowledge">
+				<h3 class="">My Knowledge Level in software</h3>
+
+
+
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="row features">
-				<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-map-location-dot icon"></i>
-					<h3 class="name">Works Everywhere</h3>
-					<p class="description">Happy to work remotley. Also I am willing to relocate</p>
+			<img class=" img-fluid" alt="coding away" src="./images/HavingFunWithCollin2.jpeg"
+				style="width:auto ; height:auto ;">
+
+		</div>
+	</div>
+</div>
+
+
+<div class="container attributesContainer " >
+	<div class="row justify-content-center align-items-center">
+			<div class="col-md-12">
+				<div class="features-clean"></div>
+				<div class="row intro">
+					<div class="col-sm-12 ">
+						<h2 class="text-center"> Attributes </h2>
+						<p class="text-center">Below are abilities that I would classify myself with </p>
+					</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 item"><i class="fa fa-clock-o icon"></i>
-					<h3 class="name">Always available</h3>
-					<p class="description">I am quick to answer any questions, and solve problems when they arrive</p>
-				</div>
-				<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-people-group icon"></i>
-					<h3 class="name">Team Player</h3>
-					<p class="description">I work best with others on projects big and small.</p>
-				</div>
-				<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-list-check icon"></i>
-					<h3 class="name">Problem Solver</h3>
-					<p class="description">I like solving problems</p>
-				</div>
-				<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-rocket icon"></i>
-					<h3 class="name">Fast</h3>
-					<p class="description">I like to run marathons and compete in obstacle course races.</p>
-				</div>
-				<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-person-chalkboard icon"></i>
-					<h3 class="name">Presenter</h3>
-					<p class="description">I have always been a go getter for presenting on demos and upcoming topics within
-						the industry.</p>
+			</div>
+
+		<div class="row">
+
+			<div class="col-md-12">
+				<div class="row features">
+					<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-map-location-dot icon"></i>
+						<h3 class="name">Works Everywhere</h3>
+						<p class="description">Happy to work remotley. Also I am willing to relocate</p>
+					</div>
+					<div class="col-sm-6 col-lg-4 item"><i class="fa fa-clock-o icon"></i>
+						<h3 class="name">Always available</h3>
+						<p class="description">I am quick to answer any questions, and solve problems when they arrive
+						</p>
+					</div>
+					<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-people-group icon"></i>
+						<h3 class="name">Team Player</h3>
+						<p class="description">I work best with others on projects big and small.</p>
+					</div>
+					<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-list-check icon"></i>
+						<h3 class="name">Problem Solver</h3>
+						<p class="description">I like solving problems</p>
+					</div>
+					<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-rocket icon"></i>
+						<h3 class="name">Fast</h3>
+						<p class="description">I like to run marathons and compete in obstacle course races.</p>
+					</div>
+					<div class="col-sm-6 col-lg-4 item"><i class="fa-solid fa-person-chalkboard icon"></i>
+						<h3 class="name">Presenter</h3>
+						<p class="description">I have always been a go getter for presenting on demos and upcoming
+							topics within
+							the industry.</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div class="row">
+
+<div class="container notTopContainer">
+
+	<div class="row justify-content-center ">
+		<div class="col-md-12">
+			<h2 class="text-center"> Professional History </h2>
+		</div>
+	</div>
+	<div class="row justify-content-center ">
 		<div class="col-md-6">
 			<div class="timeline">
 				<div class="outer">
@@ -130,11 +167,6 @@
 							<h3 class="title">Edgewater Real Estate</h3>
 							<i>September 2019 - December 2020</i>
 							<p>Building Manager</p>
-							<p>
-								Managing tenant requests
-								Selling apartments and keeping the building 95% rented.
-								Maintain basic upkeep of the building.
-							</p>
 						</div>
 					</div>
 
@@ -174,19 +206,134 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-6">
-			<div class="col-md-6" id="myKnowledge">
-				<h3 class="">My Knowledge Level in software</h3>
-	
-	
-	
-			</div>
+</div>
+
+<div class="container">
+	<div class="row justify-content-center ">
+		<div class="col-md-12">
+			<h2 class="text-center"> Articles and How To's </h2>
 		</div>
-		<div class="col-md-6">
-			<img class=" img-fluid" alt="coding away" src="./images/HavingFunWithCollin2.jpeg"
-				style="width:auto ; height:auto ;">
-			
+	</div>
+
+	<div class="py-5">
+		<div class="container">
+		  <div class="row hidden-md-up">
+			<div class="col-md-4">
+			  <div class="card">
+				<div class="card-block">
+				  <h4 class="card-title ">Quamtum Computing in Financial Tech</h4>
+				  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+				  <p class="card-text p-y-1">Some quick example text to build on the card title .</p>
+				  <div class="card-read-more">
+					<a href="#" class="btn btn-link btn-block card-link">
+						Read More
+					</a>
+				</div>
+				</div>
+			  </div>
+			</div>
+
+
+			<div class="col-md-4">
+			  <div class="card">
+				<div class="card-block">
+				  <h4 class="card-title">5G in Financial Tech</h4>
+				  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+				  <p class="card-text p-y-1">Some quick example text to build on the card title .</p>
+				  <div class="card-read-more">
+					<a href="#" class="btn btn-link btn-block card-link">
+						Read More
+					</a>
+				</div>
+				</div>
+			  </div>
+			</div>
+
+			<div class="col-md-4">
+			  <div class="card">
+				<div class="card-block">
+				  <h4 class="card-title">How to use Git</h4>
+				  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+				  <p class="card-text p-y-1">Some quick example text to build on the card title .</p>
+				  <div class="card-read-more">
+					<a href="#" class="btn btn-link btn-block card-link">
+						Read More
+					</a>
+				</div>
+				</div>
+			  </div>
+			</div>
+
+		  </div><br>
+		  <div class="row">
+			<div class="col-md-4">
+			  <div class="card">
+				<div class="card-block">
+				  <h4 class="card-title">Building a Docker Container</h4>
+				  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+				  <p class="card-text p-y-1">Some quick example text to build on the card title .</p>
+				  <div class="card-read-more">
+					<a href="#" class="btn btn-link btn-block card-link">
+						Read More
+					</a>
+				</div>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="card">
+				<div class="card-block">
+				  <h4 class="card-title">Continious Integration</h4>
+				  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+				  <p class="card-text p-y-1">Some quick example text to build on the card title .</p>
+				  <div class="card-read-more">
+					<a href="#" class="btn btn-link btn-block card-link">
+						Read More
+					</a>
+				</div>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="card">
+				<div class="card-block">
+				  <h4 class="card-title">Building a webpage</h4>
+				  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+				  <p class="card-text p-y-1">Some quick example text to build on the card title .</p>
+				  <div class="card-read-more">
+					<a href="#" class="btn btn-link btn-block card-link">
+						Read More
+					</a>
+				</div>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+
+
+</div>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-3">
+			<p>Hello</p>
+		</div>
+		<div class="col-md-9">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-9">
+		</div>
+		<div class="col-md-3">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+		</div>
+		<div class="col-md-9">
 		</div>
 	</div>
 </div>
+
