--- a/views/layout/index.ejs
+++ b/views/layout/index.ejs
@@ -34,11 +34,11 @@
 <body>
     <header>
         <!-- <div class="jumbotron d-none d-sm-block"></div> -->
-
+        <%- include('./partials/navigation') %>
     </header>
 
     <%- include(`../pages/${template}`) %>
-    <%- include('./partials/scripts') %>
+        <%- include('./partials/scripts') %>
 
 </body>
 
