store submitted contact me

--- a/views/layout/partials/scripts.ejs
+++ b/views/layout/partials/scripts.ejs
@@ -17,10 +17,10 @@
 
   <script src="/js/index.js"></script>
    
-  <!-- 
-<% if (locals.feedback) {%>
-  <script src="/js/feedback.js"></script>
-<%}%>
+  <% if (locals.contactMe) {%>
+    <script src="/js/contactMe.js"></script>
+    <%}%>
+    <!-- 
 <% if (locals.fbResult) {%>
   <script src="/js/fbResult.js"></script>
 <%}%>
