--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -45,7 +45,7 @@
 									<a href="contactMe/" class="button"><button class="button-54" role="button">Contact Me</button></a>
 								</div>
 								<div class="col-md-6">
-									<button class="button-54" role="button">Resume</button>
+									<a href="contactMe/" class="button"><button class="button-54" role="button">Resume</button></a>
 								</div>
 							</div>
 						</div>
@@ -238,7 +238,7 @@
 						<div class="col-md-4">
 							<div class="article-card">
 								<div class="article-card-block">
-									<h4 class="article-card-title ">Quamtum Computing in Financial Tech</h4>
+									<h4 class="article-card-title ">Applied Quantum Optimization in Payment Fraud Detection White Paper</h4>
 									<h6 class="article-card-subtitle text-muted">Support card subtitle</h6>
 									<p class="article-card-text p-y-1">Some quick example text to build on the card title .</p>
 									<div class="article-card-read-more">
@@ -254,7 +254,7 @@
 						<div class="col-md-4">
 							<div class="article-card">
 								<div class="article-card-block">
-									<h4 class="article-card-title">5G in Financial Tech</h4>
+									<h4 class="article-card-title">The Future of FinTech: Implications of 5G for Financial Services</h4>
 									<h6 class="article-card-subtitle text-muted">Support card subtitle</h6>
 									<p class="article-card-text p-y-1">Some quick example text to build on the card title .</p>
 									<div class="article-card-read-more">
