--- a/views/layout/index.ejs
+++ b/views/layout/index.ejs
@@ -1,45 +1,27 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title><%= siteName %> | <%= pageTitle %></title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
 
-<head>
-    <title>
-        <%= siteName %> | <%= pageTitle %>
-    </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=block" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  </head>
 
-
-    <!DOCTYPE html>
-    <html>
-
-    <head>
-        <title>Page Title</title>
-        <link rel='stylesheet'
-            href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    </head>
-
-<body>
-
-</html>
-
-<link rel="stylesheet" href="/css/style.css" />
-<meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=block" rel="stylesheet" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
+  <body>
     <header>
-        <!-- <div class="jumbotron d-none d-sm-block"></div> -->
-        <%- include('./partials/navigation') %>
+
+      <%- include('./partials/navigation') %>
     </header>
 
-    <%- include(`../pages/${template}`) %>
-        <%- include('./partials/scripts') %>
-
-</body>
-
+    <%- include(`../pages/${template}`) %> 
+    <%- include('./partials/scripts') %>
+  </body>
 </html>
