--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 
 	<section>
 		<div class="container" id="homeAboutMe">
-			<div class="row justify-content-center align-items-center" style="height: 80vh ;">
+			<div class="row justify-content-center align-items-center" style="height: 70vh ;">
 
 				<div class="col-md-6"
 					style="background-color: rgba(220, 220, 220, 0.762);  text-align: center; height: 700px; padding-top: 100px;">
@@ -235,14 +235,15 @@
 			<div class="py-5">
 				<div class="container">
 					<div class="row hidden-md-up">
+
 						<div class="col-md-4">
 							<div class="article-card">
 								<div class="article-card-block">
 									<h4 class="article-card-title ">Applied Quantum Optimization in Payment Fraud Detection White Paper</h4>
-									<h6 class="article-card-subtitle text-muted">Support card subtitle</h6>
-									<p class="article-card-text p-y-1">Some quick example text to build on the card title .</p>
+									<h6 class="article-card-subtitle text-muted">July 2021</h6>
+									<p class="article-card-text p-y-1">Manmeet Singh, Mani Singh and Collin Stolpa, FIS</p>
 									<div class="article-card-read-more">
-										<a href="#" class="btn btn-link btn-block article-card-link">
+										<a href="/articles" class="btn btn-link btn-block article-card-link">
 											Read More
 										</a>
 									</div>
@@ -250,15 +251,14 @@
 							</div>
 						</div>
 
-
 						<div class="col-md-4">
 							<div class="article-card">
 								<div class="article-card-block">
 									<h4 class="article-card-title">The Future of FinTech: Implications of 5G for Financial Services</h4>
-									<h6 class="article-card-subtitle text-muted">Support card subtitle</h6>
-									<p class="article-card-text p-y-1">Some quick example text to build on the card title .</p>
+									<h6 class="article-card-subtitle text-muted">March 2021</h6>
+									<p class="article-card-text p-y-1">Manmeet Singh, Mani Singh and Collin Stolpa, FIS</p>
 									<div class="article-card-read-more">
-										<a href="#" class="btn btn-link btn-block article-card-link">
+										<a href="/articles" class="btn btn-link btn-block article-card-link">
 											Read More
 										</a>
 									</div>
@@ -281,7 +281,7 @@
 							</div>
 						</div>
 
-					</div><br>
+					</div>
 					<div class="row">
 						<div class="col-md-4">
 							<div class="article-card">
