--- a/views/layout/partials/navigation.ejs
+++ b/views/layout/partials/navigation.ejs
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-sm navbar-light ">
+<nav class="navbar navbar-expand-sm navbar-light navbar-fixed-top">
     <!-- Container wrapper -->
     <div class="container-fluid">
         <!-- Navbar brand -->
