--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,14 +1,13 @@
 <article class="scroller">
 
-	<section>
-		<div class="container" id="homeAboutMe">
-			<div class="row justify-content-center align-items-center" style="height: 70vh ;">
+	<section id="homeAboutMe">
+		<div class="container" id="">
+			<div class="row justify-content-center align-items-center" >
 
-				<div class="col-md-6"
-					style="background-color: rgba(220, 220, 220, 0.762);  text-align: center; height: 700px; padding-top: 100px;">
+				<div class="col-md-6" style="background-color: rgba(220, 220, 220, 0.762);  text-align: center; height: 700px; padding-top: 100px;">
 					<div>
 						<img class="rounded-circle img-fluid" alt="Headshot" src="./images/headshot.png"
-							style="width:200px ; height:auto ;">
+							style="width:250px ; height:auto ;">
 						<h1>
 							Collin Stolpa
 						</h1>
@@ -27,9 +26,9 @@
 				</div>
 
 				<div class="col-md-6">
-					<h3 class="text-left">
+					<h1 class="text-center">
 						About Me
-					</h3>
+					</h1>
 					<p>
 						Goal driven individual who is eager to expand and maintain their knowledge in the tools and
 						culture
@@ -58,7 +57,7 @@
 
 
 	<section id="softwareKnowledge">
-		<div class="container notTopContainer">
+		<div class="container ">
 
 			<div class="row justify-content-center align-items-center">
 				<div class="col-md-6">
@@ -132,7 +131,7 @@
 	</section>
 
 	<section id="professionalHistory">
-		<div class="container notTopContainer">
+		<div class="container ">
 
 			<div class="row justify-content-center ">
 				<div class="col-md-12">
@@ -286,7 +285,7 @@
 						<div class="col-md-4">
 							<div class="article-card">
 								<div class="article-card-block">
-									<h4 class="article-card-title">Building a Docker Container</h4>
+									<h4 class="article-card-title">How to train for a marathon</h4>
 									<h6 class="article-card-subtitle text-muted">Support article-card subtitle</h6>
 									<p class="article-card-text p-y-1">Some quick example text to build on the article-card title .</p>
 									<div class="article-card-read-more">
