articles dynamically rendered to index

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -234,96 +234,7 @@
 			<div class="py-5">
 				<div class="container">
 					<div class="row hidden-md-up">
-
-						<div class="col-md-4">
-							<div class="article-card">
-								<div class="article-card-block">
-									<h4 class="article-card-title ">Applied Quantum Optimization in Payment Fraud Detection White Paper</h4>
-									<h6 class="article-card-subtitle text-muted">July 2021</h6>
-									<p class="article-card-text p-y-1">Manmeet Singh, Mani Singh and Collin Stolpa, FIS</p>
-									<div class="article-card-read-more">
-										<a href="/articles" class="btn btn-link btn-block article-card-link">
-											Read More
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-4">
-							<div class="article-card">
-								<div class="article-card-block">
-									<h4 class="article-card-title">The Future of FinTech: Implications of 5G for Financial Services</h4>
-									<h6 class="article-card-subtitle text-muted">March 2021</h6>
-									<p class="article-card-text p-y-1">Manmeet Singh, Mani Singh and Collin Stolpa, FIS</p>
-									<div class="article-card-read-more">
-										<a href="/articles" class="btn btn-link btn-block article-card-link">
-											Read More
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-4">
-							<div class="article-card">
-								<div class="article-card-block">
-									<h4 class="article-card-title">How to use Git</h4>
-									<h6 class="article-card-subtitle text-muted">Support card subtitle</h6>
-									<p class="article-card-text p-y-1">Some quick example text to build on the card title .</p>
-									<div class="article-card-read-more">
-										<a href="#" class="btn btn-link btn-block article-card-link">
-											Read More
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<div class="row">
-						<div class="col-md-4">
-							<div class="article-card">
-								<div class="article-card-block">
-									<h4 class="article-card-title">How to train for a marathon</h4>
-									<h6 class="article-card-subtitle text-muted">Support article-card subtitle</h6>
-									<p class="article-card-text p-y-1">Some quick example text to build on the article-card title .</p>
-									<div class="article-card-read-more">
-										<a href="#" class="btn btn-link btn-block article-card-link">
-											Read More
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="article-card">
-								<div class="article-card-block">
-									<h4 class="article-card-title">Creating a Community of Practice</h4>
-									<h6 class="article-card-subtitle text-muted">Support article-card subtitle</h6>
-									<p class="article-card-text p-y-1">Some quick example text to build on the article-card title .</p>
-									<div class="article-card-read-more">
-										<a href="#" class="btn btn-link btn-block article-card-link">
-											Read More
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="article-card">
-								<div class="article-card-block">
-									<h4 class="article-card-title">Building a webpage</h4>
-									<h6 class="article-card-subtitle text-muted">Support article-card subtitle</h6>
-									<p class="article-card-text p-y-1">Some quick example text to build on the article-card title .</p>
-									<div class="article-card-read-more">
-										<a href="#" class="btn btn-link btn-block article-card-link">
-											Read More
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
+						<%- include('./partials/_index_articles_cards') %>
 					</div>
 				</div>
 			</div>
