Article pages work

--- a/views/pages/articles.ejs
+++ b/views/pages/articles.ejs
@@ -1,4 +1,9 @@
 <div class="container article-container" >
-    <h1>Hello from articles</h1>
-    
+    <div class="">
+        <h1 class="display-4"><%= articles.title %></h1>
+        <p class="lead"><%= articles.author %> - <%= articles.date %></p>
+        <p><%= articles.about %></p>
+        <hr class="my-4">
+        <p><%= articles.content %> </p>
+      </div>
 </div>
