--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
 		<div class="container" id="">
 			<div class="row justify-content-center align-items-center" >
 
-				<div class="col-md-6" style="background-color: rgba(220, 220, 220, 0.762);  text-align: center; height: 700px; padding-top: 100px;">
+				<div class="col-md-6 aboutMeHome">
 					<div>
 						<img class="rounded-circle img-fluid" alt="Headshot" src="./images/headshot.png"
 							style="width:250px ; height:auto ;">
