--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,390 +1,390 @@
 html,
 body {
-    height: 100%;
-    overflow: hidden;
-
-    
+  height: 100%;
+  overflow: hidden;
 }
 
 :root {
-    --primary-color: #fff;
-    /* try #212121 also for dark mode */
-    --background-color: #212121;
-    --font: sans-serif;
-
+  --primary-color: #fff;
+  /* try #212121 also for dark mode */
+  --background-color: #212121;
+  --font: sans-serif;
 }
 
 /* Alert */
-.alert{
-    margin-top: 40px;
+.alert {
+  margin-top: 40px;
 }
 
 /* Sections */
 
 .scroller {
-    height: 90vh;
-    overflow-y: scroll;
-    scroll-snap-type: y proximity;
-    scroll-padding: 40px;
-    scroll-behavior: smooth;
-    overflow: auto;
+  height: 90vh;
+  overflow-y: scroll;
+  scroll-snap-type: y proximity;
+  scroll-padding: 40px;
+  scroll-behavior: smooth;
+  /* overflow: auto; */
 }
-
-
 
 .scroller section {
-    scroll-snap-align: start;
-    /* padding-top: 80px; */
+  scroll-snap-align: start;
+  
+  /* padding-top: 80px; */
 
 }
 
-#homeAboutMe{
-   min-height: 100%;
-
-   
+#homeAboutMe {
+  min-height: 100%;
+  /* position: relative; */
+  /* margin-top: 50%; */
 }
 
-#softwareKnowledge{
- /* height: 90vh; */
+#softwareKnowledge {
+  /* height: 90vh; */
 }
 
-#attributes{
-
+#attributes {
 }
 
-#professionalHistory{
-
+#professionalHistory {
 }
 
-#howToArticles{
-
+#howToArticles {
 }
 
 .container {
-    min-height: 90vh;
+  /* height: 90vh; */
+  /* margin-top: 50%; */
+  margin: auto;
 
-    /* display: fluid; */
-    /* justify-content: center; */
-    /* align-items: center; */
+  /* justify-content: center; 
+    align-items: center; */
 }
 
+.aboutMeHome {
+  background-color: rgba(220, 220, 220, 0.762);
+  text-align: center;
+  height: 700px;
+  padding-top: 100px;
+}
 
 /* Navbar */
-.navbar{
-    position: sticky;
-    width: 100%;
-    background-color: #fff;
-    height: 75px;
-
+.navbar {
+  position: sticky;
+  width: 100%;
+  background-color: #fff;
+  height: 75px;
 }
-
-
-
-
 
 .attributesContainer {
-    min-height: 60vh;
-    margin-top: 50px;
-
+  min-height: 60vh;
+  margin-top: 50px;
 }
 
-
 .button-54 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    letter-spacing: 2px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #000;
-    cursor: pointer;
-    border: 3px solid;
-    padding: 0.25em 0.5em;
-    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
-    position: relative;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 .button-54:active {
-    box-shadow: 0px 0px 0px 0px;
-    top: 5px;
-    left: 5px;
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
 }
 
 @media (min-width: 768px) {
-    .button-54 {
-        padding: 0.25em 0.75em;
-    }
+  .button-54 {
+    padding: 0.25em 0.75em;
+  }
 }
-
 
 a {
-    display: inline-block;
-    color: black;
-    text-decoration: none;
-    margin: 15px 4px;
-    position: relative;
-    -webkit-transition-duration: 0.4s;
-    -moz-transition-duration: 0.4s;
-    -o-transition-duration: 0.4s;
+  display: inline-block;
+  color: black;
+  text-decoration: none;
+  margin: 15px 4px;
+  position: relative;
+  -webkit-transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
 }
 
-
 a:hover {
-    color: #fff;
-    opacity: 0.9;
-    text-shadow: 2px 3px 5px #000000;
-    top: -3px;
+  color: #fff;
+  opacity: 0.9;
+  text-shadow: 2px 3px 5px #000000;
+  top: -3px;
 }
 
 .dashboard {
-    display: flex;
+  display: flex;
 }
 
 svg {
-    width: 114px;
-    height: 114px;
-    margin: 1em;
+  width: 114px;
+  height: 114px;
+  margin: 1em;
 }
 
 .bg {
-    fill: none;
-    stroke-width: 10px;
-    stroke: #1A2C34;
+  fill: none;
+  stroke-width: 10px;
+  stroke: #1a2c34;
 }
 
 [class^="meter-"] {
-    fill: none;
-    stroke-width: 10px;
-    stroke-linecap: round;
-    transform: rotate(-90deg);
-    transform-origin: 50% 50%;
-
+  fill: none;
+  stroke-width: 10px;
+  stroke-linecap: round;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
 }
 
 .meter-1 {
-    stroke-dasharray: 360;
-    stroke-dashoffset: 200;
-    stroke: rgb(149, 149, 149);
-    animation: progress-1 1s ease-out;
+  stroke-dasharray: 360;
+  stroke-dashoffset: 200;
+  stroke: rgb(149, 149, 149);
+  animation: progress-1 1s ease-out;
 }
 
 .meter-2 {
-    stroke: rgb(149, 149, 149);
-    stroke-dasharray: 360;
-    stroke-dashoffset: 160;
-    animation: progress-2 .75s ease-out;
+  stroke: rgb(149, 149, 149);
+  stroke-dasharray: 360;
+  stroke-dashoffset: 160;
+  animation: progress-2 0.75s ease-out;
 }
 
 .meter-3 {
-    stroke: rgb(149, 149, 149);
-    stroke-dasharray: 360;
-    stroke-dashoffset: 250;
-    animation: progress-3 .5s ease-out;
+  stroke: rgb(149, 149, 149);
+  stroke-dasharray: 360;
+  stroke-dashoffset: 250;
+  animation: progress-3 0.5s ease-out;
 }
 
 @keyframes progress-1 {
-    from {
-        stroke-dashoffset: 360;
-    }
+  from {
+    stroke-dashoffset: 360;
+  }
 
-    to {
-        stroke-dashoffset: 200;
-    }
+  to {
+    stroke-dashoffset: 200;
+  }
 }
 
 @keyframes progress-2 {
-    from {
-        stroke-dashoffset: 360;
-    }
+  from {
+    stroke-dashoffset: 360;
+  }
 
-    to {
-        stroke-dashoffset: 160;
-    }
+  to {
+    stroke-dashoffset: 160;
+  }
 }
 
 @keyframes progress-3 {
-    from {
-        stroke-dashoffset: 360;
-    }
+  from {
+    stroke-dashoffset: 360;
+  }
 
-    to {
-        stroke-dashoffset: 250;
-    }
+  to {
+    stroke-dashoffset: 250;
+  }
 }
 
 /* Attributes about */
 
 .features {
-    margin-left: 35px;
-    margin-right: 35px;
+  margin-left: 35px;
+  margin-right: 35px;
 }
 
 .features-clean {
-    color: #313437;
-    background-color: #fff;
-    padding-bottom: 30px;
-
+  color: #313437;
+  background-color: #fff;
+  padding-bottom: 30px;
 }
 
-@media (max-width:767px) {
-    .features-clean {
-        padding-bottom: 10px;
-    }
+@media (max-width: 767px) {
+  .features-clean {
+    padding-bottom: 10px;
+  }
 }
 
 .features-clean p {
-    color: #7d8285;
+  color: #7d8285;
 }
 
 .features-clean h2 {
-    font-weight: bold;
-    margin-bottom: 40px;
-    padding-top: 40px;
-    color: inherit;
+  font-weight: bold;
+  margin-bottom: 40px;
+  padding-top: 40px;
+  color: inherit;
 }
 
-@media (max-width:767px) {
-    .features-clean h2 {
-        margin-bottom: 25px;
-        padding-top: 25px;
-        font-size: 24px;
-    }
+@media (max-width: 767px) {
+  .features-clean h2 {
+    margin-bottom: 25px;
+    padding-top: 25px;
+    font-size: 24px;
+  }
 }
 
 .features-clean .intro {
-    font-size: 16px;
-    max-width: 500px;
-    margin: 0 auto 60px;
+  font-size: 16px;
+  max-width: 500px;
+  margin: 0 auto 60px;
 }
 
-@media (max-width:767px) {
-    .features-clean .intro {
-        margin-bottom: 40px;
-    }
+@media (max-width: 767px) {
+  .features-clean .intro {
+    margin-bottom: 40px;
+  }
 }
 
 .features-clean .item {
-    min-height: 100px;
-    padding-left: 80px;
-    margin-bottom: 40px;
+  min-height: 100px;
+  padding-left: 80px;
+  margin-bottom: 40px;
 }
 
-@media (max-width:767px) {
-    .features-clean .item {
-        min-height: 0;
-    }
+@media (max-width: 767px) {
+  .features-clean .item {
+    min-height: 0;
+  }
 }
 
 .features-clean .item .name {
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 20px;
-    color: inherit;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: inherit;
 }
 
 .features-clean .item .description {
-    font-size: 15px;
-    margin-bottom: 0;
+  font-size: 15px;
+  margin-bottom: 0;
 }
 
 .features-clean .item .icon {
-    font-size: 40px;
-    color: #000000;
-    float: left;
-    margin-left: -65px;
+  font-size: 40px;
+  color: #000000;
+  float: left;
+  margin-left: -65px;
 }
-
-
 
 /* Timeline Container */
 .timeline {
-    background: var(--primary-color);
-    margin: 20px auto;
-    padding: 20px;
+  background: var(--primary-color);
+  margin: 20px auto;
+  padding: 20px;
 }
 
 /* Outer Layer with the timeline border */
 .outer {
-    border-left: 2px solid rgb(0, 0, 0);
+  border-left: 2px solid rgb(0, 0, 0);
 }
 
 /* Card container */
 .card {
-    position: relative;
-    margin: 0 0 20px 20px;
-    padding: 10px;
-    background: rgb(0, 0, 0);
-    color: gray;
-    border-radius: 8px;
-    max-width: 400px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  position: relative;
+  margin: 0 0 20px 20px;
+  padding: 10px;
+  background: rgb(0, 0, 0);
+  color: gray;
+  border-radius: 8px;
+  max-width: 400px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .card:hover {
-    box-shadow: 0 5px 5px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  }
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
 
 /* Information about the timeline */
 .info {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 /* Title of the card */
 .card-title {
-    color: rgb(255, 255, 255);
-    position: relative;
+  color: rgb(255, 255, 255);
+  position: relative;
 }
 
 /* Timeline dot  */
 .card-title::before {
-    content: "";
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    background: rgb(255, 255, 255);
-    border-radius: 999px;
-    left: -41px;
-    border: 3px solid rgb(0, 0, 0);
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  background: rgb(255, 255, 255);
+  border-radius: 999px;
+  left: -41px;
+  border: 3px solid rgb(0, 0, 0);
 }
 
 /* timeline title */
 .education {
-    color: rgb(255, 255, 255);
-    position: relative;
+  color: rgb(255, 255, 255);
+  position: relative;
 }
 
 .education::before {
-    font-family: "Font Awesome 5 Free";
-    content: "\f19d";
-    display: inline-block;
-    padding-right: 3px;
-    vertical-align: middle;
-    font-weight: 900;
+  font-family: "Font Awesome 5 Free";
+  content: "\f19d";
+  display: inline-block;
+  padding-right: 3px;
+  vertical-align: middle;
+  font-weight: 900;
 }
 
 .work {
-    color: rgb(255, 255, 255);
-    position: relative;
+  color: rgb(255, 255, 255);
+  position: relative;
 }
 
 .work::before {
-    font-family: "Font Awesome 5 Free";
-    content: "\f0b1";
-    display: inline-block;
-    padding-right: 3px;
-    vertical-align: middle;
-    font-weight: 900;
+  font-family: "Font Awesome 5 Free";
+  content: "\f0b1";
+  display: inline-block;
+  padding-right: 3px;
+  vertical-align: middle;
+  font-weight: 900;
 }
-
-
 
 /* Progress bars */
 .progress {
+  background: rgba(0, 0, 0, 0.1);
+  justify-content: flex-start;
+  border-radius: 100px;
+  align-items: center;
+  position: relative;
+  padding: 0 5px;
+  display: flex;
+  height: 12px;
+  width: 410px;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 990px) {
+  .progress {
     background: rgba(0, 0, 0, 0.1);
     justify-content: flex-start;
     border-radius: 100px;
@@ -393,171 +393,146 @@ svg {
     padding: 0 5px;
     display: flex;
     height: 12px;
-    width: 410px;
+    width: auto;
     margin-bottom: 20px;
-
+  }
 }
 
-@media(max-width:990px) {
-
-    .progress {
-        background: rgba(0, 0, 0, 0.1);
-        justify-content: flex-start;
-        border-radius: 100px;
-        align-items: center;
-        position: relative;
-        padding: 0 5px;
-        display: flex;
-        height: 12px;
-        width: auto;
-        margin-bottom: 20px;
-
-    }
+@media (max-width: 990px) {
+  .progress-value {
+    animation: load 3s normal forwards;
+    box-shadow: 0 10px 40px -10px rgb(0, 0, 0);
+    border-radius: 100px;
+    background: rgb(0, 0, 0);
+    height: 8px;
+    width: 0;
+  }
 }
 
-@media(max-width:990px) {
-    .progress-value {
-
-        animation: load 3s normal forwards;
-        box-shadow: 0 10px 40px -10px rgb(0, 0, 0);
-        border-radius: 100px;
-        background: rgb(0, 0, 0);
-        height: 8px;
-        width: 0;
-    }
+@media (min-width: 990px) {
+  .progress {
+    background: rgba(0, 0, 0, 0.1);
+    justify-content: flex-start;
+    border-radius: 100px;
+    align-items: center;
+    position: relative;
+    padding: 0 5px;
+    display: flex;
+    height: 12px;
+    width: auto;
+    margin-bottom: 20px;
+  }
 }
 
-@media(min-width:990px) {
-
-    .progress {
-        background: rgba(0, 0, 0, 0.1);
-        justify-content: flex-start;
-        border-radius: 100px;
-        align-items: center;
-        position: relative;
-        padding: 0 5px;
-        display: flex;
-        height: 12px;
-        width: auto;
-        margin-bottom: 20px;
-
-    }
+@media (min-width: 990px) {
+  .progress-value {
+    animation: load 3s normal forwards;
+    box-shadow: 0 10px 40px -10px rgb(0, 0, 0);
+    border-radius: 100px;
+    background: rgb(0, 0, 0);
+    height: 8px;
+    width: 0;
+  }
 }
-
-@media(min-width:990px) {
-    .progress-value {
-
-        animation: load 3s normal forwards;
-        box-shadow: 0 10px 40px -10px rgb(0, 0, 0);
-        border-radius: 100px;
-        background: rgb(0, 0, 0);
-        height: 8px;
-        width: 0;
-    }
-}
-
-
 
 @keyframes load {
-    0% {
-        width: 0;
-    }
+  0% {
+    width: 0;
+  }
 
-    100% {
-        width: var(--progBar);
-    }
+  100% {
+    width: var(--progBar);
+  }
 }
 
 .loaingPercent {
-    margin-top: 15px;
-    margin-bottom: 1rem;
-    margin-left: 8px;
+  margin-top: 15px;
+  margin-bottom: 1rem;
+  margin-left: 8px;
 }
 
 /* portfolio cards */
 .article-card {
-    position: relative;
-    margin: 0 0 20px 20px;
-    padding: 10px;
-    background: rgb(0, 0, 0);
-    color: gray;
-    border-radius: 8px;
-    max-width: 400px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  position: relative;
+  margin: 0 0 20px 20px;
+  padding: 10px;
+  background: rgb(0, 0, 0);
+  color: gray;
+  border-radius: 8px;
+  max-width: 400px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .article-card:hover {
-    box-shadow: 0 5px 5px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  }
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
 
 .article-card-title {
-    color: rgb(255, 255, 255);
-    position: relative;
+  color: rgb(255, 255, 255);
+  position: relative;
 }
 
 .article-card-link {
-    color: white;
+  color: white;
 }
 
 .article-card-read-more {
-    border-top: 1px solid #D4D4D4;
+  border-top: 1px solid #d4d4d4;
 }
 
 .article-card-read-more a {
-    text-decoration: none !important;
-    padding: 10px;
-    font-weight: 600;
-    text-transform: uppercase
+  text-decoration: none !important;
+  padding: 10px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 /* contact me  */
 
-.contact{
-    padding: 4%;
-    height: 400px;
-   
+.contact {
+  padding: 4%;
+  height: 400px;
 }
-.contact .row{
-margin-top: 15%;
+.contact .row {
+  margin-top: 15%;
 }
-.col-md-3{
-    background: #000000;
-    padding: 4%;
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
+.col-md-3 {
+  background: #000000;
+  padding: 4%;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
-.contact-info{
-    margin-top:10%;
-    color: white;
+.contact-info {
+  margin-top: 10%;
+  color: white;
 }
-.contact-info img{
-    margin-bottom: 15%;
+.contact-info img {
+  margin-bottom: 15%;
 }
-.contact-info h2{
-    margin-bottom: 10%;
+.contact-info h2 {
+  margin-bottom: 10%;
 }
-.col-md-9{
-    background: #fff;
-    padding: 3%;
-    border-top-right-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
+.col-md-9 {
+  background: #fff;
+  padding: 3%;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
-.contact-form label{
-    font-weight:600;
+.contact-form label {
+  font-weight: 600;
 }
-.contact-form button{
-    background: #25274d;
-    color: #fff;
-    font-weight: 600;
-    width: 25%;
+.contact-form button {
+  background: #25274d;
+  color: #fff;
+  font-weight: 600;
+  width: 25%;
 }
-.contact-form button:focus{
-    box-shadow:none;
+.contact-form button:focus {
+  box-shadow: none;
 }
 
 /* Articles */
 
-.article-container{
-    margin-top: 10%;
-    
+.article-container {
+  margin-top: 10%;
 }
