Added articles about stuff

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 :root {
@@ -29,7 +29,7 @@ body {
 
 .scroller section {
   scroll-snap-align: start;
-  
+
   /* padding-top: 80px; */
 
 }
@@ -44,14 +44,11 @@ body {
   /* height: 90vh; */
 }
 
-#attributes {
-}
+#attributes {}
 
-#professionalHistory {
-}
+#professionalHistory {}
 
-#howToArticles {
-}
+#howToArticles {}
 
 .container {
   /* height: 90vh; */
@@ -493,40 +490,49 @@ svg {
   padding: 4%;
   height: 400px;
 }
+
 .contact .row {
   margin-top: 15%;
 }
+
 .col-md-3 {
   background: #000000;
   padding: 4%;
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
 }
+
 .contact-info {
   margin-top: 10%;
   color: white;
 }
+
 .contact-info img {
   margin-bottom: 15%;
 }
+
 .contact-info h2 {
   margin-bottom: 10%;
 }
+
 .col-md-9 {
   background: #fff;
   padding: 3%;
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
+
 .contact-form label {
   font-weight: 600;
 }
+
 .contact-form button {
   background: #25274d;
   color: #fff;
   font-weight: 600;
   width: 25%;
 }
+
 .contact-form button:focus {
   box-shadow: none;
 }
@@ -534,5 +540,7 @@ svg {
 /* Articles */
 
 .article-container {
-  margin-top: 10%;
+  margin-top: 5%;
+  /* overflow: unset; */
 }
+
