--- a/views/pages/articles.ejs
+++ b/views/pages/articles.ejs
@@ -1,9 +1,22 @@
 <div class="container article-container" >
-    <div class="">
+    <div class="" style="height: 100vh;">
         <h1 class="display-4"><%= articles.title %></h1>
         <p class="lead"><%= articles.author %> - <%= articles.date %></p>
-        <p><%= articles.about %></p>
+        <%- JSON.stringify(articles.about).replace(/['"]+/g, '') %>
         <hr class="my-4">
-        <p><%= articles.content %> </p>
+
+        <!-- Check to see if its a pdf or markdown file and display the correct  -->
+        <% if (articles.content.type === "pdf" ) { %>
+            <iframe class="pdfView" src="/articles/<%=articles.content.file%>#toolbar=0" width="100%" height="1000px" type="application/pdf" scrolling="auto"></iframe>
+        <% } %>
+
+        <% if( articles.content.type === "markdown") { %>
+            <%- renderedMarkdown %>
+        <% } %> 
+        
+        <% if( articles.content.type === "video") { %>
+            <p> <%=articles.content.file%></p>
+        <% } %>
       </div>
 </div>
+
