final updates before I create a new branch

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -149,14 +149,16 @@
 								</div>
 							</div>
 
-							<div class="card">
-								<div class="info">
-									<h3 class="card-title">FIS</h3>
-									<i>November 2022 - Present</i>
-									<p>DevOps Engineer II</p>
+								<a class="card" href="workhistory/">
+									
+									<div class="info">
+										<h3 class="card-title">FIS</h3>
+										<i>November 2022 - Present</i>
+										<p>DevOps Engineer II</p>
+										
+									</div>
+								</a>
 
-								</div>
-							</div>
 
 							<div class="card">
 								<div class="info">
