Job history cards navigate to page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -146,46 +146,10 @@
 							<div class="card">
 								<div class="info">
 									<h3 class="work"> Work </h3></i>
+									<p>* Click Job History card to see more!</p>
 								</div>
 							</div>
-
-								<a class="card" href="workhistory/">
-									
-									<div class="info">
-										<h3 class="card-title">FIS</h3>
-										<i>November 2022 - Present</i>
-										<p>DevOps Engineer II</p>
-										
-									</div>
-								</a>
-
-
-							<div class="card">
-								<div class="info">
-									<h3 class="card-title">FIS</h3>
-									<i>November 2021 - November 2022</i>
-									<p>Software Engineer II</p>
-
-								</div>
-							</div>
-
-							<div class="card">
-								<div class="info">
-									<h3 class="card-title">FIS</h3>
-									<i>Feburary 2018 - November 2021</i>
-									<p>Software Test Analysist</p>
-
-								</div>
-							</div>
-
-							<div class="card">
-								<div class="info">
-									<h3 class="card-title">Edgewater Real Estate</h3>
-									<i>September 2019 - December 2020</i>
-									<p>Building Manager</p>
-								</div>
-							</div>
-
+							<%- include('./partials/_index_workHistory_cards') %>
 						</div>
 					</div>
 				</div>
